Fixed bug #46206 (pg_query_params/pg_execute convert passed values to strings).